public static class AnimationParams {
    
    public const string moveX = "moveX";
    public const string isMoving = "isMoving";
    public const string axisInputX = "Horizontal";
    public const string forceX = "forceX";
    public const string impulseY = "impulseY";
    public const string isOnGround = "isOnGround";
    
    public const string impulseX = "impulseX";
    public const string velocityY = "velocityY";
    public const string landedOnGround = "landedOnGround";
    public const string JumpTriggerName = "jump";
    public const string hasDoubleJumped = "hasDoubleJumped";

    // Used as a trigger, turn off when consumed
    public const string stopVelocity = "stopVelocity";

    // Player Input Action Names
    public const string jumpKeyName = "Jump";

}